updated sass files

--- a/lesson04/assignment/index.html
+++ b/lesson04/assignment/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <title>Adopt-a-dog Homepage</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+<head>
+  <title>Assignment 4 </title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" type="text/css" href="./css/style.css">
 
-  </head>
-  <body>
+</head>
+<body>
 <!--
 <div class="quotations">
     <blockquote>
@@ -27,7 +28,7 @@
       <h3>Portfolio</h3>
       <section class="img-overlay-wrap">
         <svg>
-          <img  src="imgs/AdobeStock_232304681.svg" alt="Enjoy everyday quote">
+          <img id="quote" src="imgs/AdobeStock_232304681.svg" alt="Enjoy everyday quote">
         </svg>
         <img  src="imgs/AdobeStock_276966704.jpeg" alt="Beautiful dunes beach at sunset, North Sea, Germany By eyetronic" width="1460.5" height="300">
       </section>
@@ -43,7 +44,7 @@
     </div>
     <div class="item1 item3">
       <section class="intro" onload="getRandomImage();">
-          <div class="intro-text">
+          <div class="main intro-text">
             <h1>Transition + Transform example</h1>
             <p> Hover over the div element below to see the box rotate 180 degrees.</p>
           </div>
@@ -65,45 +66,45 @@
     </div>
 
     <div class="item1 item5">
-      <div class="gallery">
+      <div class="gallery" id="gallery">
         <a target="_blank" href="imgs/AdobeStock_43992919.jpeg">
-          <img src="imgs/AdobeStock_43992919.jpeg" alt="" width="600" height="400">
+          <img class="gallery" src="imgs/AdobeStock_43992919.jpeg" alt="" width="600" height="400">
         </a>
         <div class="desc">Mindful</div>
       </div>
       <div class="gallery">
         <a target="_blank" href="https://picsum.photos/id/1015/6000/4000.jpg">
-          <img src="https://picsum.photos/id/1015/6000/4000.jpg" alt="Zen path of stones." width="8365" height="3500">
+          <img class="gallery" src="https://picsum.photos/id/1015/6000/4000.jpg" alt="Zen path of stones." width="8365" height="3500">
         </a>
         <div class="desc">Explore</div>
       </div>
       <div class="gallery">
         <a target="_blank" href="https://picsum.photos/id/1011/5472/3648.jpg">
-          <img src="https://picsum.photos/id/1011/5472/3648.jpg" alt="" width="600" height="400">
+          <img class="gallery" src="https://picsum.photos/id/1011/5472/3648.jpg" alt="" width="600" height="400">
         </a>
         <div class="desc">Grow</div>
       </div>
       <div class="gallery">
         <a target="_blank" href="https://picsum.photos/id/1016/3844/2563.jpg">
-          <img src="https://picsum.photos/id/1016/3844/2563.jpg" alt="" width="600" height="400">
+          <img class="gallery" src="https://picsum.photos/id/1016/3844/2563.jpg" alt="" width="600" height="400">
         </a>
         <div class="desc">Inspire</div>
       </div>
       <div class="gallery">
         <a target="_blank" href="https://picsum.photos/id/1018/3914/2935.jpg">
-          <img src="https://picsum.photos/id/1018/3914/2935.jpg" alt="" width="600" height="400">
+          <img class="gallery" src="https://picsum.photos/id/1018/3914/2935.jpg" alt="" width="600" height="400">
         </a>
         <div class="desc">Imagine</div>
       </div>
       <div class="gallery">
         <a target="_blank" href="https://picsum.photos/id/1022/6000/3376.jpg">
-          <img src="https://picsum.photos/id/1022/6000/3376.jpg" alt="" width="600" height="400">
+          <img class="gallery" src="https://picsum.photos/id/1022/6000/3376.jpg" alt="" width="600" height="400">
         </a>
         <div class="desc">Energy</div>
       </div>
       <div class="gallery">
         <a target="_blank" href="https://picsum.photos/id/1019/5472/3648.jpg">
-          <img src="https://picsum.photos/id/1019/5472/3648.jpg" alt="" width="600" height="400">
+          <img class="gallery" src="https://picsum.photos/id/1019/5472/3648.jpg" alt="" width="600" height="400">
         </a>
         <div class="desc">Restoration</div>
       </div>
